2006-11-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp: Added some missing resources.
	* MonoDevelop.Ide.Gui/BackgroundProgressMonitor.cs: Added some null
	  checks.
	* MonoDevelop.Ide.Tasks/Task.cs, MonoDevelop.Ide.Tasks/TaskService.cs:
	  Avoid relative path names in the task service.
	* MonoDevelop.Ide.Gui.Search/SearchReplaceManager.cs: Fix endless loop
	  issue. Fixes bug #79526.

2006-11-28 Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Commands/SearchCommands.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GotoClassDialog.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GotoTypeDialog.cs:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.mdp:
	* gtk-gui/generated.cs:
	* gtk-gui/gui.stetic:
	* Makefile.am:
	Renamed Goto Class to Goto Type.

2006-11-27  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs:
	Re-enabled "Find All References" functionality.

2006-11-26 David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.Ide.Gui/LayoutComboBox.cs: added
	* MonoDevelop.Ide.Gui/Workbench.cs: defined LayoutChanged event and firing
	* MonoDevelop.Ide.Commands/ViewCommands.cs: added LayoutSelector to ViewCommands enum
	* MonoDevelop.Ide.addin.xml: new LayoutSelector action and added layout toolbar
	* MonoDevelop.Ide/Makefile.am:
	* MonoDevelop.Ide/MonoDevelop.Ide.mdp: newly added file
	
2006-11-22 David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs: remember last used filter
	
2006-11-21 David Makovský (Yakeen) <yakeen@sannyas-on.net>
	
	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: fixed casting
	
2006-11-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/EditCommands.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs: Created new method for showing
	  the global preferences, with a parameter which allows showing a
	  specific page.

2006-11-16  Lluis Sanchez Gual <lluis@novell.com> 
