@@ -1,3 +1,7 @@
+2006-12-01 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
+
+	* MonoDevelop.SourceEditor.addin.xml: Changed goto to go to.
+
 2006-11-30 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed a typo.
